[gd_scene load_steps=5 format=3 uid="uid://cji06xhwmn4fd"]

[ext_resource type="PackedScene" path="res://addons/maaacks_game_template/base/scenes/menus/main_menu/main_menu.tscn" id="1_o3vkf"]
[ext_resource type="Script" path="res://game/scenes/menus/main_menu/main_menu.gd" id="2_rdmy6"]
[ext_resource type="PackedScene" path="res://game/scenes/menus/options_menu/master_options_menu_with_tabs.tscn" id="3_5vysp"]
[ext_resource type="PackedScene" path="res://game/scenes/credits/scrollable_credits.tscn" id="4_ujqux"]

[node name="MainMenu" instance=ExtResource("1_o3vkf")]
script = ExtResource("2_rdmy6")
level_select_packed_scene = null
confirm_new_game = true
game_scene_path = "res://game/scenes/game_scene/game_ui.tscn"
options_packed_scene = ExtResource("3_5vysp")
credits_packed_scene = ExtResource("4_ujqux")

[node name="ContinueGameButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer" index="1"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Continue"

[node name="LevelSelectButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer" index="2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Level Select"

[node name="LevelSelectContainer" type="MarginContainer" parent="." index="7"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 32

[node name="NewGameConfirmationDialog" type="ConfirmationDialog" parent="." index="9"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Start a New Game?"
size = Vector2i(480, 158)
dialog_text = "Are you sure you want to start a new game?

All progress in the current game will be lost."

[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer/ContinueGameButton" to="." method="_on_continue_game_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="confirmed" from="NewGameConfirmationDialog" to="." method="_on_new_game_confirmation_dialog_confirmed"]
